[metadata]
name = neutron-diagnose
summary = Neutron Diagnose Tools
description-file =
    README.rst
author = shihz
author-email = shihz@fiberhome.com
home-page = http://docs.openstack.org/developer
classifier =
    Development Status :: 1 - Beta
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    neutron_diagnose
data_files =
    etc/neutron =
        etc/neutron_diagnose.conf

[entry_points]
console_scripts =
    neutron-diagnose = neutron_diagnose.shell:main

neutron_diagnose.cli =
    compute = neutron_diagnose.client.nova_client
    network = neutron_diagnose.client.neutron_client
    identity = neutron_diagnose.client.keystone_client
    ssh = neutron_diagnose.client.ssh_client

neutron_diagnose.command =
    vm_no_ip = neutron_diagnose.command.dhcp:CheckVmIp
    router_brain_split= neutron_diagnose.command.router:CheckRouterBrainSplit
    vm_floating_ip = neutron_diagnose.command.router:CheckVmFloatingIP
    vm_sg_rule = neutron_diagnose.command.sg_rule:CheckSgRule


[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = neutron_diagnose/locale/neutron_diagnose.pot

[compile_catalog]
directory = neutron_diagnose/locale
domain = neutron_diagnose

[update_catalog]
domain = neutron_diagnose
output_dir = neutron_diagnose/locale
input_file = neutron_diagnose/locale/neutron_diagnose.pot

[wheel]
universal = 1
